Fixing scrollbar styling on non-viewport elements

--- a/src/global.css
+++ b/src/global.css
@@ -428,6 +428,34 @@ html::-webkit-scrollbar-thumb:hover {
 html::-webkit-scrollbar-thumb:active {
   background-color: var(--gray-mid-light);
 }
+@media (hover: hover) {
+  /* For desktop/mouse usage, show a nicer scrollbar on non-viewport elements */
+  ::-webkit-scrollbar,
+  ::-webkit-scrollbar-corner {
+    background-color: var(--black);
+  }
+  ::-webkit-scrollbar-thumb {
+    border: 2px solid transparent;
+    border-radius: 100px;
+    background-color: var(--gray-mid-dark);
+    background-clip: padding-box;
+  }
+  ::-webkit-scrollbar:vertical {
+    width: 10px;
+  }
+  ::-webkit-scrollbar:horizontal {
+    height: 10px;
+  }
+  ::-webkit-scrollbar:hover {
+    background-color: var(--gray-dark);
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--gray-mid);
+  }
+  ::-webkit-scrollbar-thumb:active {
+    background-color: var(--gray-mid-light);
+  }
+}
 
 #varied-vibe-app {
   display: flex;
